# checkers-board-tournament

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
checkers_board_tournament/: board.py  checkers_util.py  controller.py  game.py  game_result.py  main.py  piece.py
checkers_board_tournament/bots/: base_bot.py  first_mover.py  random_bot.py
checkers_bot_tournament/: board.py  board_start_builder.py  checkers_util.py  controller.py  game.py  game_result.py  main.py  move.py  piece.py  play_move_info.py  stat_printing.py
checkers_bot_tournament/bots/: Flexibility3Ply.py  FlexibilityOpp.py  GreedyCat.py  Material3Ply.py  base_bot.py  bot_tracker.py  copycat.py  first_mover.py  greedycat.py  hunter.py  malicious_bot.py  random_bot.py  scaredycat.py
tests/: test_chain_captures.py  test_draw_repetition.py  test_malicious_bot.py  test_pdn_functionality.py
tests/pdns/: complete_game.pdn  invalid_moves.pdn  short_game.pdn
