[tool.poetry]
name = "checkers-bot-tournament"
version = "0.1.0"
description = ""
authors = ["trentzz <z.trent.w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
pytest = "^8.3.3"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checkers = "checkers_bot_tournament.main:main"