[tool.poetry]
name = "checkers-bot-tournament"
version = "0.1.0"
description = ""
authors = ["trentzz <z.trent.w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
pytest = "^8.3.3"
mypy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
poethepoet = "^0.31.1"
coverage = "^7.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checkers = "checkers_bot_tournament.main:main"

[tool.poe.tasks]
_sort_imports = "ruff check --select I --fix ."
_ruff_format = "ruff format  ."
_ruff_check = 'ruff check .'
_mypy = 'mypy .'

format_check = 'ruff format . --check'
fix = "ruff check --fix ."

_test_all = "coverage run -m pytest ./tests"
coverage_report = 'coverage report --omit "**/tests/**" --show-missing'

[[tool.poe.tasks.format]]
sequence = ['_sort_imports', '_ruff_format']
ignore_fail = 'return_non_zero'

[[tool.poe.tasks.check]]
sequence = ['format_check', '_ruff_check', '_mypy']
ignore_fail = 'return_non_zero'

[[tool.poe.tasks.test]]
sequence = ['_test_all', 'coverage_report']
ignore_fail = 'return_non_zero'

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
ignore = [ # Add ignore codes here
    "E741",  # Ambiguous variable name (l can be 1)
]